<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reveal_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background"
    android:padding="@dimen/activity_padding"
    tools:context="avantari.com.materilaanimationtask.activity.ChartActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:cardBackgroundColor="@color/colorAccent"
        app:cardCornerRadius="@dimen/card_corner_radius">

        <android.support.percent.PercentRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/graph_view_id"
                android:background="@android:color/white"
                android:paddingLeft="@dimen/title_view_margin_left"
                android:paddingTop="@dimen/title_view_margin_top">

                <TextView
                    android:id="@+id/current_msg_tv_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/power_page_msg"
                    android:visibility="invisible"
                    android:textColor="@android:color/tertiary_text_dark" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/current_msg_tv_id"
                    android:background="@android:color/white">

                    <TextView
                        android:id="@+id/current_value_tv_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:text="92.3"
                        android:textColor="@android:color/black"
                        android:textSize="44sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/current_value_tv_id"
                        android:layout_marginBottom="@dimen/unit_view_margin_bttom"
                        android:layout_marginLeft="@dimen/unit_view_margin_left"
                        android:layout_toRightOf="@+id/current_value_tv_id"
                        android:fontFamily="sans-serif"
                        android:text="@string/power_unit"
                        android:textColor="@android:color/black"
                        android:textSize="28sp"
                        android:textStyle="bold" />
                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/graph_view_id"
                android:layout_width="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@color/colorAccent"
                app:layout_heightPercent="65%">

                <RelativeLayout
                    android:id="@+id/title_view_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/header_margin"
                    android:visibility="invisible">

                    <ImageView
                        android:id="@+id/back_btn_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignBottom="@+id/title_tv_id"
                        android:layout_alignParentLeft="true"
                        android:src="@drawable/back_btn02"
                        android:visibility="invisible" />

                    <TextView
                        android:id="@+id/title_tv_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="sans-serif"
                        android:text="Time Power"
                        android:textColor="@color/white"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/title_tv_id"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:fontFamily="sans-serif"
                        android:text="2014.12.25"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                </RelativeLayout>


                <ImageView
                    android:id="@+id/shared_target"
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_centerInParent="true"
                    android:background="@drawable/circular_bg"
                    android:focusableInTouchMode="false"
                    android:padding="16dp"
                    android:transitionName="@string/transition_reveal1" />

                <com.github.mikephil.charting.charts.BarChart
                    android:id="@+id/graph_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="80dp"
                    android:visibility="invisible" />
            </RelativeLayout>

        </android.support.percent.PercentRelativeLayout>

    </android.support.v7.widget.CardView>

</RelativeLayout>
